--- a/u.html
+++ b/u.html
@@ -8,150 +8,82 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <style>
     body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(to right, #e0f7fa, #fce4ec);
-      padding: 30px;
+      font-family: Arial, sans-serif;
+      background: #f4f4f4;
+      padding: 20px;
     }
-
-    .container {
-      background: white;
-      padding: 25px;
-      border-radius: 12px;
-      box-shadow: 0 0 12px rgba(0,0,0,0.1);
-    }
-
-    h2 {
-      text-align: center;
-      margin-bottom: 30px;
-      color: #007bff;
-    }
-
-    label {
-      font-weight: bold;
-    }
-
     textarea {
       width: 100%;
-      height: 150px;
-      margin-bottom: 15px;
-      resize: vertical;
+      height: 120px;
+      margin-bottom: 10px;
+      resize: none;
       font-family: monospace;
-      background: #f9f9f9;
-      border: 1px solid #ccc;
-      border-radius: 6px;
-      padding: 10px;
     }
-
     button {
-      display: block;
-      width: 100%;
-      padding: 12px;
-      font-weight: bold;
+      padding: 10px 20px;
       background-color: #007bff;
       color: white;
       border: none;
-      border-radius: 6px;
-      transition: background 0.3s ease;
-      margin-bottom: 20px;
+      cursor: pointer;
+      font-weight: bold;
     }
-
     button:hover {
       background-color: #0056b3;
     }
-
-    .status {
-      margin-bottom: 10px;
-      font-weight: bold;
-    }
-
-    .status span {
-      color: #d32f2f;
-    }
-
     table {
       width: 100%;
       border-collapse: collapse;
       margin-top: 20px;
-      background: white;
-      border-radius: 8px;
-      overflow: hidden;
+      background: #fff;
     }
-
     th, td {
       border: 1px solid #ddd;
       padding: 8px;
       text-align: center;
     }
-
     th {
       background-color: #007bff;
       color: white;
     }
-
     tr:nth-child(even) {
       background-color: #f2f2f2;
     }
-
     .live {
-      background-color: #d0f0c0;
+      background-color: #c8e6c9;
     }
-
     .die {
       background-color: #ffcdd2;
     }
-
-    .loading {
-      background-color: #fff59d;
-    }
-
-    @media (max-width: 900px) {
-      textarea {
-        height: 100px;
-      }
-
-      th, td {
-        font-size: 13px;
-        padding: 6px;
-      }
-    }
   </style>
-</head>
+  </head>
 <body>
 
-  <div class="text-center">
-    <h2>🚀 Check danh sách UID Facebook</h2>
+  <h2>🚀 Check danh sách UID Facebook</h2>
 
-    <label>Nhập danh sách UID (mỗi dòng 1 UID):</label>
-    <textarea id="uids" placeholder="1000xxxxxxxxxx"></textarea>
+  <label>Nhập danh sách UID (mỗi dòng 1 UID):</label>
+  <textarea id="uids" rows="10" placeholder="1000xxxxxxxxxx"></textarea>
 
-    <label>Nhập danh sách token (mỗi dòng 1 token):</label>
-    <textarea id="tokens" placeholder="EAAG..."></textarea>
+  <label>Nhập danh sách token (mỗi dòng 1 token):</label>
+  <textarea id="tokens" rows="10" placeholder="EAAG..."></textarea>
 
-    <p class="status">👉 Token Live: <span id="liveCount">0</span></p>
-    <p class="status">📋 Tổng UID: <span id="uidCount">0</span></p>
+  <p><strong>✅ Token Live:</strong> <span id="liveCount">0</span></p>
+  <button onclick="startCheck()">Bắt đầu Check</button>
 
-    <button onclick="startCheck()">🚀 Bắt đầu Check</button>
-
-    <div class="table-responsive">
-      <table id="result">
-        <thead>
-          <tr>
-            <th>UID</th>
-            <th>Tên</th>
-            <th>Location</th>
-            <th>Email</th>
-            <th>Phone</th>
-            <th>Bạn bè</th>
-            <th>Ngày tạo</th>
-            <th>Trạng thái</th>
-          </tr>
-        </thead>
-        <tbody></tbody>
-      </table>
-    </div>
-  </div>
-
- 
+  <table id="result">
+    <thead>
+      <tr>
+        <th>UID</th>
+        <th>Tên</th>
+        <th>Vị trí</th>
+        <th>Email</th>
+        <th>Phone</th>
+        <th>Bạn bè</th>
+        <th>Ngày tạo</th>
+        <th>Trạng thái</th>
+      </tr>
+    </thead>
+    <tbody></tbody>
+  </table>
 
   <script>
     let liveTokens = [];
@@ -170,15 +102,17 @@
       const input = document.getElementById("tokens");
       const lines = input.value.trim().split("\n").map(t => t.trim()).filter(Boolean);
       liveTokens = [];
+
       for (const token of lines) {
         if (await isTokenLive(token)) liveTokens.push(token);
       }
+
       input.value = liveTokens.join("\n");
       document.getElementById("liveCount").innerText = liveTokens.length;
     }
 
     async function fetchUserInfo(uid, token) {
-      const fields = "name,location,hometown,email,mobile_phone,friends.limit(0)";
+      const fields = "name,location,hometown,email,mobile_phone,gender,birthday,friends.limit(0)";
       const url = `https://graph.facebook.com/${uid}?fields=${fields}&access_token=${token}`;
       const res = await fetch(url);
       return res.json();
@@ -197,21 +131,21 @@
     async function handleUID(uid, token, tbody) {
       const tr = document.createElement("tr");
       tr.className = "loading";
-      tr.innerHTML = `<td>${uid}</td><td colspan="10">Đang tải...</td>`;
+      tr.innerHTML = `<td>${uid}</td><td colspan="8">Đang tải...</td>`;
       tbody.appendChild(tr);
 
       try {
         const data = await fetchUserInfo(uid, token);
         if (data.error) {
           tr.className = "die";
-          tr.innerHTML = `<td>${uid}</td><td colspan="10">❌ ${data.error.message}</td>`;
+          tr.innerHTML = `<td>${uid}</td><td colspan="8">❌ ${data.error.message}</td>`;
         } else {
           const createdTime = await fetchCreatedTime(uid, token);
           tr.className = "live";
           tr.innerHTML = `
             <td>${uid}</td>
             <td>${data.name || "Không rõ"}</td>
-            <td>${data.location?.name || "Không rõ"} | ${data.hometown?.name || "Không rõ"}</td>
+            <td>${data.location?.name || "Không rõ"} & ${data.hometown?.name || "Không rõ"}</td>
             <td>${data.email || "Không có"}</td>
             <td>${data.mobile_phone || "Không có"}</td>
             <td>${data.friends?.summary?.total_count || 0}</td>
@@ -219,37 +153,37 @@
             <td>✅ Live</td>
           `;
         }
-      } catch {
+      } catch (err) {
         tr.className = "die";
-        tr.innerHTML = `<td>${uid}</td><td colspan="10">❌ Lỗi không xác định</td>`;
+        tr.innerHTML = `<td>${uid}</td><td colspan="8">❌ Lỗi không xác định</td>`;
       }
     }
 
     async function startCheck() {
-  await checkTokensLive();
-  const uidList = document.getElementById("uids").value.trim().split("\n").filter(Boolean);
-  const tbody = document.querySelector("#result tbody");
-  tbody.innerHTML = "";
-  document.getElementById("uidCount").innerText = uidList.length; // 👉 cập nhật tổng UID
-  if (!uidList.length || !liveTokens.length) return alert("Nhập UID và đảm bảo có token live.");
+      const uidList = document.getElementById("uids").value.trim().split("\n").filter(Boolean);
+      const tbody = document.querySelector("#result tbody");
+      tbody.innerHTML = "";
 
-  const batchSize = 25;
-  let index = 0;
-  while (index < uidList.length) {
-    const batch = uidList.slice(index, index + batchSize);
-    await Promise.all(batch.map((uid, i) => {
-      const token = liveTokens[(index + i) % liveTokens.length];
-      return handleUID(uid, token, tbody);
-    }));
-    index += batchSize;
-    await new Promise(r => setTimeout(r, 800));
-  }
-}
+      if (uidList.length === 0) return alert("Vui lòng nhập danh sách UID");
+      if (liveTokens.length === 0) return alert("Không có token live");
+
+      const batchSize = 5;
+      let index = 0;
+
+      while (index < uidList.length) {
+        const batch = uidList.slice(index, index + batchSize);
+        await Promise.all(batch.map((uid, i) => {
+          const token = liveTokens[(index + i) % liveTokens.length];
+          return handleUID(uid, token, tbody);
+        }));
+        index += batchSize;
+        await new Promise(r => setTimeout(r, 800));
+      }
+    }
 
     document.getElementById("tokens").addEventListener("input", () => {
-      setTimeout(checkTokensLive, 1000);
+      setTimeout(() => checkTokensLive(), 1000);
     });
   </script>
-
 </body>
 </html>
